[package]
name = "FileSystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = { version="0.14.0",features= ["abi-7-9"]}  
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.20"
env_logger = "0.10.1"
libc = "0.2.152"
